--- a/Survey/styles/informal/base.css
+++ b/Survey/styles/informal/base.css
@@ -2214,7 +2214,8 @@ html[dir=rtl] .sidebyside .o-question-information {
   padding-left: 1em;
 }
 
-.sidebyside .o-question-response {
+.sidebyside .o-question-core > .o-question-response,
+.sidebyside .o-question-core > questions {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
